CHANGES.txt - 2008-09-10
------------------------

CHANGES IN CUPS V1.4b1

	- The lpstat command now supports a -H option to display the
	  default server (STR #2833)
	- The scheduler now supports a FatalErrors directive to control
	  which errors should cause the scheduler to exit (STR #2536)
	- The scheduler now uses the php-cgi program if it is available
	  (STR #2923)
	- The scheduler now supports a DefaultPaperSize directive
	  (STR #2848)
	- The scheduler now passes the job-originating-host-name
	  value to filters in the options argument (STR #2558)
	- CUPS now supports job tickets in PDF files (STR #2903)
	- Added a DBUS notifier (STR #2529)
	- The LPD mini-daemon now passes the document name when queuing
	  print jobs (STR #2482)
	- The IPP backend did not relay com.apple.print.recoverable-message
	  values.
	- The scheduler now supports a job-media-progress attribute to
	  track the progress of individual pages.
	- The sample HP driver now supports A5 (STR #2798)
	- The CUPS web interface menu item now uses the xdg-open
	  command, when available (STR #2724)
	- The cups-lpd program now supports the -h option (STR #2794)
	- The scheduler now sets the PAM_TTY parameter and the
	  PAM_ESTABLISH_CRED credential flag (STR #2745)
	- The scheduler now logs unsuccessful requests to the error_log
	  file as errors (STR #2616)
	- Added support for a "retry-current-job" error policy that
	  retries the current job immediately when the backend encounters
	  an error (STR #2555)
	- The scheduler now returns a "forbidden" error when a user
	  correctly authenticates but does not have permission to
	  continue further (STR #2101)
	- The scheduler now loads both the server and CA certificates
	  (if present) from the ServerCertificate file (STR #2146)
	- New RSS subscriptions now create their feed files immediately
	  (STR #2853)
	- Added support for a device-location attribute which provides
	  the physical location of a printer device.